# Neo-MoFox

./: .gitignore  AI插件编写规范.md  Dockerfile  MoFox 重构指导总览.md  README.md  docker-compose.yml  main.py  pyproject.toml  代码规范.md
docs/app/: README.md  architecture.md  command_reference.md  plugin_system.md  runtime.md
docs/concurrency/: README.md  task_manager.md  types.md  watchdog.md
docs/core/config/: core_config.md  mcp_config.md
docs/core/managers/: tool_manager.md
docs/core/models/: stream.md
docs/db/: README.md  api.md  core.md
docs/examples/: manifest_example.json
docs/guides/plugin-authoring/: 1-introduction.md  10-llm-api.md  11-tool-llm.md  12-default-chatter-fsm.md  13-agent-orchestration.md  14-action.md  15-event-system.md  16-chatter.md  17-router.md  18-adapter.md  19-message-model.md  2-minimal-concept.md  20-overview-and-next.md  3-first-plugin.md  6-config.md  (+6 more)
docs/llm/: request.md
docs/storage/: README.md
plugins/booku_memory/: __init__.py  config.py  event_handler.py  manifest.json  manual.py  plugin.py
plugins/default_chatter/: config.py  decision_agent.py  multimodal.py  plugin.py  prompt_builder.py  runners.py  sub_agent_collaboration.py  tool_flow.py  type_defs.py
plugins/emoji_sender/: README.md  __init__.py  action.py  config.py  manifest.json  plugin.py  service.py
plugins/napcat_adapter/: README.md  config.py  manifest.json  plugin.py
plugins/perm_plugin/: README.md  __init__.py  manifest.json  plugin.py
plugins/skill_manager/: README.md  __init__.py  config.py  manifest.json  models.py  plugin.py  tools.py
plugins/utility_commands/: __init__.py  manifest.json  plugin.py
scripts/: clear_booku_knowledge.py  config_manager.py  migrate_database.py  migrate_models.py  run_screen_control_agent.py
src/app/: _init_.py
src/core/: __init__.py
src/kernel/: __init__.py
test/core/: test_components_base_adapter.py  test_components_base_agent.py  test_components_base_chatter.py  test_components_base_chatter_format.py  test_components_base_config.py  test_utils_user_query_helper.py
test/kernel/: test_concurrency.py  test_config.py  test_db.py  test_deps_installer.py  test_event.py  test_logger.py  test_scheduler.py  test_storage.py
test/plugins/: test_default_chatter_decision_agent.py  test_default_chatter_prompt_builder.py  test_default_chatter_runners.py  test_default_chatter_sub_agent.py  test_default_chatter_sub_agent_collaboration.py  test_default_chatter_theme_guide.py  test_default_chatter_tool_flow.py  test_expression_learning_event_handler.py.disabled  test_expression_learning_plugin.py.disabled  test_expression_learning_service.py.disabled  test_napcat_adapter_startup_validation.py  test_notice_injector.py.disabled  test_skill_manager_commands.py  test_skill_manager_tools.py
(+262 files in other folders)
