[project]
name = "neo-mofox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "mcp>=1.26.0",
    "mofox-wire>=0.1.5",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "rich>=14.3.1",
    "sqlalchemy[asyncio]>=2.0.46",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
addopts = [
    "--cov=src",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
omit = [
    "test/*",
    "tests/*",
    "examples/*",
    "docs/*",
    "old/*",
    "scripts/*",
    "data/*",
    "logs/*",
    "htmlcov/*",
    "config/*",
    "**/__pycache__/*",
]
