[project]
name = "neo-mofox"
version = "1.1.0-alpha"
description = "一个全新重构的 AI 聊天机器人框架，它的目标不仅仅是回答问题，而是创造一个真正的数字生命体。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "anthropic>=0.57.1",
    "async-lru>=2.1.0",
    "asyncpg>=0.31.0",
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "json-repair>=0.57.1",
    "mcp>=1.26.0",
    "mofox-wire>=0.1.7",
    "openai>=2.16.0",
    "packaging>=26.0",
    "pydantic>=2.12.5",
    "pyfiglet>=1.0.4",
    "rich>=14.3.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
addopts = [
    "--cov=src",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
omit = [
    "test/*",
    "tests/*",
    "examples/*",
    "docs/*",
    "old/*",
    "scripts/*",
    "data/*",
    "logs/*",
    "htmlcov/*",
    "config/*",
    "**/__pycache__/*",
]
